--- a/style.css
+++ b/style.css
@@ -1,10 +1,49 @@
 body {
         font-family: 'Newsreader', serif;
         box-sizing: border-box;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 18px;
+        line-height: 24px;
+        color: black;
+
+    }
+
+    h2 {
+      font-size:24px;
+    }
+
+    .column {
+      float: left;
+      padding: 10px;
+    }
+
+    .left {
+      width: 35%;
+    }
+
+    .right {
+      width: 65%;
+      margin: auto;
+      padding: 50px;
+    }
+
+    .footerleft{
+        width: 90%;
+        margin: auto;
+        text-align: right;
+    }
+
+    .footerright{
+        width: 10%;
+        margin: auto;
+    }
+
+    .row {
+      display: flex;
     }
 
         /*
-    }
   The grid itself needs only 4 CSS declarations:
 */
 
@@ -31,10 +70,10 @@ body {
 
 
 
-.grid-item { 
+.grid-item {
   width: calc(33.333% - 24px);
   margin-bottom: 24px;
-  
+
 
 }
 
@@ -98,16 +137,122 @@ body {
 
 body {
   font-family: 'Newsreader', serif;
-  padding: 24px;
-  padding-top: 80px;
+  padding-top: 10px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 h1{
-
   text-align: center;
   color: #333;
   font-size: 40px;
   margin-bottom: 64px;
 }
 
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  padding: 20px 10px;
+}
 
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px 30px;
+  text-decoration: none;
+  font-size: 21px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  padding: 0px;
+}
+
+.header a.logo:hover {
+  text-decoration: none;
+}
+
+a {
+  display: block;
+  position: relative;
+  padding: 0.2em 0;
+}
+
+
+/* Style the active/current link*/
+a.active {
+ font-weight: bold;
+}
+/* slide in effect*/
+a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.1em;
+  background-color: #3a6e3b;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+}
+
+a:hover::after,
+a:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0.2em, 0);
+}
+
+a:visited{
+  text-decoration: none;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+
+/* About page */
+.About {
+
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding-right: 50px;
+}
+
+.footer-text {
+  padding: 10px;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+
+  body{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
